--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         #textbox{
             width: 98.9%;
             border: 3px solid black;
+            font-size: 20px;
         }
         p{
             text-align: center;
